[flake8]
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox

[pytest]
addopts = --color=auto --cov=concierge --cov-report=term-missing
norecursedirs = build dist docs *.egg-info .eggs cache .tox

[wheel]
universal = 0
python-tag = py34

[metadata]
name = concierge-mako
version = 0.1
description-file = README.rst
summary = Mako templating for concierge
author = Sergey Arkhipov
author-email = serge@aerialsounds.org
license = MIT
home-page = https://github.com/9seconds/concierge-mako
requires-python = >=3.3
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    concierge_mako

[entry_points]
concierge.templater =
    mako = concierge_mako:MakoTemplater

[global]
setup-hooks =
    pbr.hooks.setup_hook
